tests/src/snapshots/fe_compiler_tests__compile_errors__overflow_u16_pos.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `u16`
  ┌─ [snippet]:3:7
  │
3 │   u16(65536)
  │       ^^^^^ does not fit into type `u16`


