tests/src/snapshots/fe_compiler_tests__compile_errors__string_capacity_mismatch.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: string capacity exceeded
  ┌─ [snippet]:3:13
  │
3 │   String<3>("too long")
  │             ^^^^^^^^^^ this string has length 8; expected length <= 3


