tests/src/snapshots/fe_compiler_tests__compile_errors__type_constructor_from_variable.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: type mismatch
  ┌─ [snippet]:4:16
  │
4 │   y: u16 = u16(x)
  │                ^ expected a number literal


