tests/src/snapshots/fe_compiler_tests__compile_errors__unary_not_on_int.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: cannot apply unary operator `not` to type `u256`
  ┌─ [snippet]:4:7
  │
4 │   not x
  │       ^ this has type `u256`; expected a `bool`


